@@ -1,4 +1,5 @@
-* IMPROVEMENT: Openssl3 is supported for packaging.
+* IMPROVEMENT: Functions deprecated in OpenSSL 3 replaced with new ones.
+* IMPROVEMENT: OpenSSL 3 is supported for packaging.
 
 Version 3.21
 
